--- a/labo02/Untitled-2.html
+++ b/labo02/Untitled-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <title> Natalya Novak </title>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 </ul>
 
 <h2>Over mij</h2>
-<p><img src="C:\Users\shash\Downloads\les02 opgave\images\natalya.jpg" title="Foto van Natalya"/></p>
+<p><img src="natalya.jpg" title="Foto van Natalya"/></p>
 
 <p>Mijn naam is Natalya Novak. Ik ben voltijds <strong> beëdigd vertaler-tolk<sup>1</sup></strong> Nederlands–Russisch. Dankzij mijn diploma bestuurswetenschappen heb ik een goede kennis van de correcte juridische terminologie. Bovendien heb ik het certificaat van <strong>gerechtsvertaler en -tolk<sup>2</sup></strong>, waardoor documenten hun juridische waarde behouden. Door het beroepsgeheim blijft de inhoud van uw documenten beschermd.</p>
 
@@ -49,40 +49,37 @@
 
 <p>Mylene Wouters:</p>
 
-<ul>
+<p>
  "Ik ben 100 procent content. Super professioneel, snelle vertaling, en de prijs is echt goedkoop."
-</ul>
+</p>
 
 <p>Dmitry Sokolov:</p>
 
-<ul>
+<p>
  "Спасибо за хороший и быстрый перевод! Всем советую!"
-</ul>
+</p>
 
 <strong>Let op!</strong>
 
 <p>Voor vertalingen van documenten die in het buitenland geldig moeten zijn, is soms een apostillestempel vereist. Het wordt geplaatst in het land dat het document uitgeeft.</p>
 
-<p>
-  <img src ="C:\Users\shash\Downloads\les02 opgave\images\apostille1.png"/>
-  <img src ="C:\Users\shash\Downloads\les02 opgave\images\apostille2.png"/>
-  <img src ="C:\Users\shash\Downloads\les02 opgave\images\apostille3.png"/>
-</p>
+<figure>
+  <img src ="apostille1.png" alt = "apostille 1"/>
+  <img src ="apostille2.png" alt = "apostille 2"/>
+  <img src ="apostille3.png" alt = "apostille 3"/>
+  <figcaption>voorbeelden van apostilles</figcaption>
+</figure>
     
-<p>
-  <dd>voorbeelden van apostilles</dd>
-</p>
-
 <h5>Contacteer mij!</h5>
 
-<em>
+
    <address>
-     <a href="tel:0032 123 45 67 89">tel 0032 123 45 67 89</a><br>
-     <a href="mailto:irina@navok.ru">email irina@navok.ru</a><br>
+     <a href="tel:+32123456789">tel 0032 123 45 67 89 </a>><br>
+     <a href="mailto:irina@navok.ru">email irina@navok.ru </a><br>
      Mosterdstraat 117<br>
      2100 Antwerpen (België)
    </address>
-</em>
+
 
 <p>
  <a href="ganaarcontactpagina.html">ga naar contactpagina →</a>
