--- a/labo09-12/index.html
+++ b/labo09-12/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Travelblog Home</title>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/start.css">
