--- a/Project Website/index.html
+++ b/Project Website/index.html
@@ -14,11 +14,11 @@
     <header>
         <div id="banner">
             <div class="branding">
-                    <h1 id="logo"><a href="shiro.html">Shiro Sushi Bar</a></h1>
+                    <h1 id="logo"><a href="index.html">Shiro Sushi Bar</a></h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href ="shiro.html" class="active">HOME</a></li>
+                    <li><a href ="index.html" class="active">HOME</a></li>
                     <li><a href ="signature-menu.html">SIGNATURE DISH</a></li>
                     <li><a href ="sushi-menu.html">SUSHI MENU</a></li>
                     <li><a href ="contact.html">CONTACT</a></li>
@@ -29,7 +29,7 @@
     <main>
         <section id="information">
             <div class="container">
-                <div class="openingsuren" >
+                <div class="openinghour" >
                     <h1>Opening Hour</h1>
                     <table>
                         <tbody>
@@ -74,7 +74,7 @@
             <div id="ourinfo">
                 <h1>About Us</h1>
                 <div class="aboutus">
-                    <p>Shiro sushi bar opens its door for all the sushi lovers. Here at Shiro Sushi Bar we are obsessed with sushi and we believe we have the most wonderful, awesomest and tastiest recipes in the West-Flanders.</p>
+                    <p>Shiro Sushi Bar opens its door for all the sushi lovers. Here at Shiro Sushi Bar we are obsessed with sushi and we believe we have the most wonderful, awesomest and tastiest recipes in the West-Flanders.</p>
                     <p>Feel free to come and choose from one of our signature sushi menus.</p>
                     <p>We don't compromise on quality of ingredients. We only use fresh and delicious ingredients to make the perfect sushi that sushi lovers desire. </p>
                 </div>
