--- a/Project Website/sushi-menu.html
+++ b/Project Website/sushi-menu.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
-    <title> Home | Shiro Sushi Bar </title>
+    <title> Sushi Menu | Shiro Sushi Bar </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/sushi-menucss.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
             <div id="banner">
                 <div class="branding">
-                    <h1 id="logo"><a href="shiro.html">Shiro Sushi Bar</a></h1>
+                    <h1 id="logo"><a href="index.html">Shiro Sushi Bar</a></h1>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href ="shiro.html" class="active">HOME</a></li>
+                        <li><a href ="index.html" class="active">HOME</a></li>
                         <li><a href ="signature-menu.html">SIGNATURE DISH</a></li>
                         <li><a href ="sushi-menu.html">SUSHI MENU</a></li>
                         <li><a href ="contact.html">CONTACT</a></li>
@@ -28,7 +29,7 @@
                 <div class="sushiproductslist">
                     <h2>Shiro Sushi</h2>
                     <div class="ItemList">
-                        <div class="ItemTitle">
+                        <div class="ItemTitle1">
                             <img src="img/Nigiri_cutted.png" alt="Nigiri">
                             <div class="ItemTitle"><h3>NIGIRI (2 pcs)</h3></div>
                             <div class="sushilist">
@@ -54,7 +55,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle2">
                             <img src="img/Hand_Roll_cutted.png" alt="Hand Roll">
                             <div class="ItemTitle"><h3>Hand Roll (1 pcs)</h3></div>
                             <div class="sushilist">
@@ -72,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle3">
                             <img src="img/Hoso_Maki_cutted.png" alt="Hoso Maki">
                             <div class="ItemTitle"><h3>Hoso Maki (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -102,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle4">
                             <img src="img/Inside_Out_Roll_cutted.png" alt="Inside out Roll">
                             <div class="ItemTitle"><h3>Inside Out Roll (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -148,7 +149,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle5">
                             <img src="img/Futo_Maki_cutted.png" alt="Futo Maki">
                             <div class="ItemTitle"><h3>Futo Maki (6 pcs)</h3></div>
                             <div class="sushilist">
@@ -178,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle6">
                             <img src="img/Shiro_Special_cutted.png" alt="Shiro Special">
                             <div class="ItemTitle"><h3>Shiro Special (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -212,7 +213,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle7">
                             <img src="img/Sashimi_cutted.png" alt="Sashimi">
                             <div class="ItemTitle"><h3>Sashimi (6 pcs)</h3></div>
                             <div class="sushilist">
@@ -234,7 +235,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle8">
                             <img src="img/springroll.png" alt="springroll">
                             <div class="ItemTitle"><h3>Spring Roll</h3></div>
                             <div class="sushilist">
@@ -256,10 +257,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle">
+                        <div class="ItemTitle9">
                             <img src="img/noodels.png" alt="noodels">
                             <div class="ItemTitle"><h3>Noodles</h3></div>
                             <div class="sushilist">
+                                <div class="item">
+                                    <div class="itemname">Vegetarian Wok</div>
+                                    <div class="itemprice">€ 8,00</div>
+                                </div>
                                 <div class="item">
                                     <div class="itemname">Chicken Wok</div>
                                     <div class="itemprice">€ 9,00</div>
@@ -268,10 +273,7 @@
                                     <div class="itemname">Scampi Wok</div>
                                     <div class="itemprice">€ 10,00</div>
                                 </div>
-                                <div class="item">
-                                    <div class="itemname">Vegetarian Wok</div>
-                                    <div class="itemprice">€ 8,00</div>
-                                </div>
+                              
                             </div>
                         </div>
                     </div>
