--- a/Project Website/contact.html
+++ b/Project Website/contact.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
      <head>
-    <title> Home | Shiro Sushi Bar </title>
+    <title> Contact | Shiro Sushi Bar </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/contactcss.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/fe9a93a24f.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
             <div id="banner">
                 <div class="branding">
-                    <h1 id="logo"><a href="shiro.html">Shiro Sushi Bar</a></h1>
+                    <h1 id="logo"><a href="index.html">Shiro Sushi Bar</a></h1>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href ="shiro.html" class="active">HOME</a></li>
+                        <li><a href ="index.html" class="active">HOME</a></li>
                         <li><a href ="signature-menu.html">SIGNATURE DISH</a></li>
                         <li><a href ="sushi-menu.html">SUSHI MENU</a></li>
                         <li><a href ="contact.html">CONTACT</a></li>
@@ -69,7 +71,7 @@
                                 </tr>
                                 <tr>
                                     <td>Social:</td>
-                                    <td><a href="https://www.facebook.com/shirosushibar/"></a></td>
+                                    <td><a href="https://www.facebook.com/shirosushibar/"><i class="fab fa-facebook"></i></a></td>
                                 </tr>
                                 <tr>
                                     <td>Adress:</td>
@@ -77,12 +79,13 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <div class="location">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.741801033282!2d2.958854515949964!3d51.22383193921736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcaeac82d6aaab%3A0x16b485fc65f028af!2sVeldstraat%201%2C%208450%20Bredene!5e0!3m2!1sen!2sbe!4v1577374854119!5m2!1sen!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                        </div>
+                    </div>
+                    <div class="location">
+                        <h1>Our Location</h1>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.741801033282!2d2.958854515949964!3d51.22383193921736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcaeac82d6aaab%3A0x16b485fc65f028af!2sVeldstraat%201%2C%208450%20Bredene!5e0!3m2!1sen!2sbe!4v1577374854119!5m2!1sen!2sbe" width="400" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                     <form>
-                        <h1>Stay in touch</h1>
+                        <h1>Let Us Know</h1>
 						<p>
 							<label for="name">name</label>
 							<input type="text" id="name" required>
@@ -90,12 +93,16 @@
 						<p>
 							<label for="email">email</label>
 							<input type="text" id="email" required>
+                        </p>
+                        <p>
+							<label for="message">message</label>
+							<textarea id="message" required></textarea>
 						</p>
 						<p>
 							<button type="submit">Send</button>
                         </p>
                     </form>
-                 
+                   
                 </div>
             </section>
         </main>
