--- a/Project Website/signature-menu.html
+++ b/Project Website/signature-menu.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title> Home | Shiro Sushi Bar </title>
+    <title> Signature Dish | Shiro Sushi Bar </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/signature-menucss.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -12,11 +13,11 @@
         <header>
             <div id="banner">
                 <div class="branding">
-                    <h1 id="logo"><a href="shiro.html">Shiro Sushi Bar</a></h1>
+                    <h1 id="logo"><a href="index.html">Shiro Sushi Bar</a></h1>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href ="shiro.html" class="active">HOME</a></li>
+                        <li><a href ="index.html" class="active">HOME</a></li>
                         <li><a href ="signature-menu.html">SIGNATURE DISH</a></li>
                         <li><a href ="sushi-menu.html">SUSHI MENU</a></li>
                         <li><a href ="contact.html">CONTACT</a></li>
@@ -27,6 +28,7 @@
         <main>
             <section id="Products">
                 <div class="Menu">
+                    <h2>Our Signature Dishes</h2>
                     <div class="Menu-container">
                         <div class="grid-item">
                             <div class="Sushimenu">
@@ -103,7 +105,7 @@
                                 <div class="Sushipic">
                                     <img src="img/Happy_Combo_cutted.png" alt="Happy Combo">
                                 </div>
-                                <div class="Menutitle"><h3>Happy Combo (24 pcs)</h3></div>
+                                <div class="Menutitle"><h3>Happy Combo (42 pcs)</h3></div>
                                 <div class="Menutxt"> Dragon Eye 6 pcs | Manhatten 6 pcs | Spicy Roll 8 pcs | California Roll 8 pcs | Kamikaze Salmon 6 pcs | Salmon, Avocado, Cucumber 8 pcs</div>
                                 <div class="Menuprice">€40,00</div>
                             </div>
