--- a/Project Website/sushi-menu.html
+++ b/Project Website/sushi-menu.html
@@ -29,7 +29,7 @@
                 <div class="sushiproductslist">
                     <h2>Shiro Sushi</h2>
                     <div class="ItemList">
-                        <div class="ItemTitle1">
+                        <div class="ItemTitle">
                             <img src="img/Nigiri_cutted.png" alt="Nigiri">
                             <div class="ItemTitle"><h3>NIGIRI (2 pcs)</h3></div>
                             <div class="sushilist">
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle2">
+                        <div class="ItemTitle">
                             <img src="img/Hand_Roll_cutted.png" alt="Hand Roll">
                             <div class="ItemTitle"><h3>Hand Roll (1 pcs)</h3></div>
                             <div class="sushilist">
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle3">
+                        <div class="ItemTitle">
                             <img src="img/Hoso_Maki_cutted.png" alt="Hoso Maki">
                             <div class="ItemTitle"><h3>Hoso Maki (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle4">
+                        <div class="ItemTitle">
                             <img src="img/Inside_Out_Roll_cutted.png" alt="Inside out Roll">
                             <div class="ItemTitle"><h3>Inside Out Roll (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle5">
+                        <div class="ItemTitle">
                             <img src="img/Futo_Maki_cutted.png" alt="Futo Maki">
                             <div class="ItemTitle"><h3>Futo Maki (6 pcs)</h3></div>
                             <div class="sushilist">
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle6">
+                        <div class="ItemTitle">
                             <img src="img/Shiro_Special_cutted.png" alt="Shiro Special">
                             <div class="ItemTitle"><h3>Shiro Special (8 pcs)</h3></div>
                             <div class="sushilist">
@@ -213,7 +213,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle7">
+                        <div class="ItemTitle">
                             <img src="img/Sashimi_cutted.png" alt="Sashimi">
                             <div class="ItemTitle"><h3>Sashimi (6 pcs)</h3></div>
                             <div class="sushilist">
@@ -235,7 +235,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle8">
+                        <div class="ItemTitle">
                             <img src="img/springroll.png" alt="springroll">
                             <div class="ItemTitle"><h3>Spring Roll</h3></div>
                             <div class="sushilist">
@@ -257,7 +257,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ItemTitle9">
+                        <div class="ItemTitle">
                             <img src="img/noodels.png" alt="noodels">
                             <div class="ItemTitle"><h3>Noodles</h3></div>
                             <div class="sushilist">
@@ -273,7 +273,6 @@
                                     <div class="itemname">Scampi Wok</div>
                                     <div class="itemprice">€ 10,00</div>
                                 </div>
-                              
                             </div>
                         </div>
                     </div>
