--- a/Project Website/index.html
+++ b/Project Website/index.html
@@ -74,7 +74,7 @@
             <div id="ourinfo">
                 <h1>About Us</h1>
                 <div class="aboutus">
-                    <p>Shiro Sushi Bar opens its door for all the sushi lovers. Here at Shiro Sushi Bar we are obsessed with sushi and we believe we have the most wonderful, awesomest and tastiest recipes in the West-Flanders.</p>
+                    <p>Shiro Sushi Bar opens it's door for all the sushi lovers. Here at Shiro Sushi Bar we are obsessed with sushi and we believe we have the most wonderful, awesomest and tastiest recipes in the West-Flanders.</p>
                     <p>Feel free to come and choose from one of our signature sushi menus.</p>
                     <p>We don't compromise on quality of ingredients. We only use fresh and delicious ingredients to make the perfect sushi that sushi lovers desire. </p>
                 </div>
